fix: normalize UTF-8 generation and idempotent S3 upload for dispatch guides